--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@
 /log/*.log
 /tmp
 /config/database.yml
+*~
+
+# Ignore user and ad images
+/public/system/ad_images/images/*
+/public/system/users/avatars/*
