--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -13,16 +13,18 @@
 #  last_sign_in_at        :datetime
 #  current_sign_in_ip     :string(255)
 #  last_sign_in_ip        :string(255)
-#  created_at             :datetime
-#  updated_at             :datetime
-#  name                   :string(255)
-#  birthday               :datetime
-#  phone                  :string(255)
 #  avatar_file_name       :string(255)
 #  avatar_content_type    :string(255)
 #  avatar_file_size       :integer
 #  avatar_updated_at      :datetime
+#  name                   :string(255)
+#  birthday               :datetime
+#  phone                  :string(255)
 #  city_id                :integer
+#  ocupation              :string(255)
+#  user_type              :integer          default(1)
+#  created_at             :datetime
+#  updated_at             :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
