--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -28,6 +28,7 @@
 #  counter_ads            :integer          default(0)
 #  counter_events         :integer          default(0)
 #  plan_id                :integer
+#  deleted                :boolean          default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
